src/styles.scss
@import './src/assets/config'; // import shared colors etc.
@import './src/assets/scss/fonts'; // fonts and iconfonts
@import './src/assets/scss/material-components'; // tweaks to Material components
@import './src/assets/scss/helper'; // helper & misc classes

/*

___  ____ ____ ___     ___  ____ ____ _  _ ___ ____ ___
|__] |__| |__/  |      |  \ |___ [__  |_/   |  |  | |__]
|    |  | |  \  |  .   |__/ |___ ___] | \_  |  |__| |

Main stylesheet for Particl Desktop app
What you can't find here will be probably in `/src/assets/scss/material-components.scss`

  TOC:
    1. General styles
    2. Layout
      2.1. Containers
      2.2. Modifiers
      2.3. Tab/control bars
      2.4. Filters (sidebars)
      2.5. Radio switchers (sidebar submenu)
    3. UI elements
      3.1. Buttons
      3.2. Addresses
      3.3. Loading info
      3.4. No results
      3.5. Input with icon
      3.6. QR codes
      3.7. Tree browser
      3.8. Tables
    4. Typography
      4.1. Page subtitles
      4.2. Paragraph styles
    5. Plug-ins
      5.1. Charts
    6. Misc.
      6.1. Info/warning messages (releases etc.)

*/

@include mat-core();

/* ------------------------------- *\
    1. GENERAL STYLES
\* ------------------------------- */

body {
  @extend %disable-select;
  font-family: $font;
  background-color: $bg;
  font-size: 13px;
  margin: 0;
}


/* ------------------------------- *\
    2. LAYOUT
\* ------------------------------- */

// ------ 2.1. CONTAINERS ------ //

// main container for content
.container-block {
  @extend %clearfix;
  padding: $padding;
  @include break(l) {
    padding: 45px $padding-l;
  }
}


// ------ 2.2. MODIFIERS ------ //
/*
// offset content from top (due to fixed status bar)
.with-tab-bar {
  margin-top: ($header-main-height + $tab-bar-height);
}
.without-tab-bar {
  margin-top: $header-main-height;
}

.with-control-bar {
  margin-top: ($header-main-height + $control-bar-height);
}
*/
// content offset from left, when sticky sidebar is present
.with-filter {
  margin-left: $filter-width + $padding;
  @include break(l) {
    margin-left: $filter-width + $padding-l;
  }
}


// ------ 2.3. TAB/CONTROL BARS ------ //

// sticky tabs under status bar
.tab-bar {
  position: sticky;
  top: $header-main-height;
  z-index: 100;
  background: rgba($bg, 0.95);
  .buttons {
    flex: 1 0 100px;
    padding: 0 20px; // offset side padding
    border-bottom: 1px solid $bg-shadow;
    display: flex;
    justify-content: flex-end;
    align-items: center;
  }
}

// sticky control bars (eg. on Listings page)
.control-bar {
  @extend .tab-bar;
  padding: 0 28px 0 $padding;
  border-bottom: 1px solid $bg-shadow;
}


// ------ 2.4. FILTERS ------ //

.filter { // sticky sidebars in content area
  position: sticky;
  top: ($header-main-height + $tab-bar-height + $padding + 1px); // 1px for border
  width: $filter-width;
  float: left;
  .without-tab-bar & {
    top: ($header-main-height + $padding + 1px);
  }
  button.full-width {
    margin-top: 10px;
    &:first-of-type {
      margin-top: 0;
    }
  }
}


// ------ 2.5. RADIO SWITCHERS ------ //

.radio-switcher {
  @extend %mat-card;
  border-radius: $radius;
  overflow: hidden;
  label {
    input[type="radio"] { // radio button for functionality, hidden
      position: absolute;
      left: -999%;
      margin: 0;
      // active state
      &:checked + .switcher-option {
        font-weight: 600;
        .mat-icon {
          @extend %reset;
          color: $secondary;
          &.part-alert {
            color: $color-alert;
          }
        }
      }
      // keyboard/mouse focus
      &:focus + .switcher-option {
        .mat-icon {
          background: rgba($secondary, 0.05);
          padding: 8px;
          margin: 0 4px 0 0;
          &.part-alert {
            background: rgba($color-alert, 0.05);
          }
        }
      }
    }
    .switcher-option { // container for all option's content
      cursor: pointer;
      background: $color-white;
      border-top: 1px solid $bg-shadow;
      padding: 0 12px 0 4px;
      line-height: 40px;
      font-weight: 500;
      .mat-icon {
        @extend %lightest;
        @extend %tfx;
        position: relative;
        top: 3px;
        padding: 0;
        margin: 8px 12px 8px 8px;
        border-radius: 50%;
      }
      &:hover {
        .mat-icon {
          @extend %lighter;
        }
      }
    }
    &:first-of-type {
      .switcher-option {
        border: none;
      }
    }
  }
}


/* ------------------------------- *\
    3. UI ELEMENTS
\* ------------------------------- */

// ------ 3.1. BUTTONS ------ //

.actions {
  button {
    margin: 0 10px;
  }
}


// ------ 3.2. ADDRESSES ------ //

.address,
.address-label {
  overflow: hidden;
  text-overflow: ellipsis;
  background: transparent;
  transition: background 0.3s;
  white-space: nowrap;
}


// ------ 3.3. LOADING INFO ------ //

.loading-container {
  text-align: center;
  position: fixed;
  z-index: 10;
  top: $header-main-height;
  left: $sidebar-width;
  right: 0;
  bottom: 8px;
  display: flex;
  background: rgba($bg, 0.9);
  pointer-events: none;
  .loading-info { // text info for loading screens (e.g. Listings)
    margin: auto;
    .loading-image {
      width: 50px;
      height: 50px;
      padding: 14px;
      margin: 0 auto 24px;
      border-radius: 50%;
      background: $color-white;
      box-shadow: 0 0 20px rgba($bg-black, 0.07);
      & > img {
        animation: rotate 4s infinite;
        display: inline-block;
        position: relative;
        top: 2px;
      }
    }
    .title {
      font-size: 17px;
      text-transform: uppercase;
      font-weight: 600;
    }
    p {
      margin: 12px;
    }
  }
}


// ------ 3.4. NO RESULTS (no TXs, no addresses, ..) ------ //

.no-results {
  font-size: 18px;
  text-transform: uppercase;
  text-align: center;
  padding: 170px 0;
  border: 2px dashed $bg-shadow;
  background: rgba($color-white, 0.5);
  p {
    @extend %lightest;
  }
  button {
    margin-top: 12px;
  }
  .widget-help {
    @extend %reset;
    margin: 0;
    text-transform: none;
    font-size: 12px;
    color: darken($bg-shadow, 17%);
    .mat-icon {
      font-size: 13px;
      margin: 0 4px;
      position: relative;
      top: 2px;
    }
    .mat-button {
      .mat-icon {
        top: -2px;
        margin: 0 5px 0 0;
        font-size: 16px;
      }
    }
  }
}


// ------ 3.5. INPUT WITH ICON (eg. Search) ------ //

.icon-input {
  input {
    .mat-input-element {
      height: 20px;
    }
  }
  .mat-icon {
    position: absolute;
    right: 0;
    top: 2px;
    font-size: 21px;
    cursor: pointer;
  }
  .mat-form-field-underline {
    background-color: $bg-shadow;
  }
}


// ------ 3.6. QR-CODE ------ //

.qr-code {
  img {
    display: inline !important;
  }
}


// ------ 3.7. TREE BORWSER ------ //

.mat-tree {
  .category { // 1st level
    min-height: 0;
    .mat-button {
      font-size: 13px;
      .mat-icon {
        color: $bg-shadow;
      }
    }
    &[aria-expanded='true'] { // toggled category
      .mat-icon {
        color: $secondary;
      }
    }
  }
  .subcategory { // 2nd level
    min-height: 0;
    padding: 4px 40px;
    .mat-checkbox {
      font-size: 13px;
    }
  }
}


// ------ 3.8. TABLES ------ //

table {
  &.full-width {
    width: 100%;
  }
}


/* ------------------------------- *\
    4. TYPOGRAPHY
\* ------------------------------- */

h1 {
  font-weight: 500;
}


// ------ 4.1. PAGE SUBTITLES ------ //

.mat-list { // 'H2' subtitles in pages (e.g. '(un)used addresses' in Receive
  &.list-data {
    .mat-subheader {
      @extend %subtitle;
      height: auto;
      margin: 10px 0 25px !important;
      &.first {
        margin-top: -10px !important;
      }
    }
  }
}


// ------ 4.2. PARAGRAPH STYLES ------ //

p {
  line-height: 1.5;
}

// Highlighted 'lead' paragraphs
.lead {
  font-size: 15px;
}

// Help descriptions
.widget-help {
  @extend %lighter;
  font-size: 93%;
  margin-bottom: 25px;
}

// Warning & Info messages
p.warning,
p.info {
  font-weight: 500;
  font-size: 13px;
  background: $bg;
  padding: 16px 24px 16px 52px;
  position: relative;
  .mat-dialog-content & {
    margin: 24px -24px;
    text-align: left;
  }
  &::before {
    font-family: 'part';
    font-size: 1.4em;
    line-height: 0;
    position: absolute;
    top: 25px;
    left: 24px;
    margin-right: 8px;
  }
}

p.warning {
  &::before {
    content: '\ea02'; // part-alert icon
    color: $color-alert;
  }
  a {
    @extend %tfx;
    color: $color-alert;
    &:hover {
      color: darken($color-alert, 7%);
    }
  }
}

p.info {
  &::before {
    content: '\ea19'; // part-info icon
    color: $color-info;
  }
  a {
    @extend %tfx;
    color: $color-info;
    &:hover {
      color: darken($color-info, 7%);
    }
  }
}

code {
  color: darken($secondary, 10%);
  background: rgba($secondary, 0.15);
  padding: 1px 3px;
  border-radius: $radius;
}

kbd {
  font-size: 95%;
  line-height: 1.3;
  font-family: inherit;
  border: 1px solid darken($bg-hover, 7%);
  border-radius: 2px;
  background: $bg;
  display: inline-block;
  padding: 2px 5px;
  margin: 0 2px;
}


/* ------------------------------- *\
    5. PLUG-INS
\* ------------------------------- */

// ------ 5.1. Charts ------ //

.nvd3-svg {
  // Pie/donut chart
  .nv-slice {
    stroke: $color-white;
    stroke-width: 2px;
  }
  .nv-legend-text {
    fill: $text;
  }
}

.nvtooltip { // tooltips
  z-index: 1000;
  font-family: $font;
  font-size: 12px;
  color: $color-white;
  background: rgba($bg-black, 0.85);
  border-radius: $radius;
  padding: 1px 4px;
  .legend-color-guide > div {
    height: 6px;
    width: 6px;
    margin-right: 2px;
    display: inline-block;
    border-radius: $radius;
    position: relative;
    top: -1px;
  }
  .key {
    font-weight: 500;
    margin: 0 3px;
  }
  .value {
    font-size: 10px;
    color: lighten($bg-black, 50%);
    position: relative;
    top: 1px;
  }
}


/* ------------------------------- *\
    6. MISC
\* ------------------------------- */

// ------ 6.1. Info/warning messages (releases etc.) ------ //

.mat-sidenav-container {
  // when top notification present (new release/announcement), push status bar etc. below
  &.with-top-notification {
    .header-main { // status bar
      top: 61px;
    }
    /*
    .balance-overview { // Overview
      margin-top: 125px;
    }
    */
    .tab-bar,
    .control-bar {
      top: 125px;
    }
    .with-tab-bar { // content containers
      //margin-top: 175px;
      .filter {
        top: 210px;
      }
    }
    .without-tab-bar { // content containers w/o tabs
      //margin-top: 125px;
      .filter {
        top: 160px;
      }
    }
    /*
    app-listing {
      .container-block.with-control-bar {
        margin-top: 180px;
      }
    }
    */
    app-send {
      .from-box {
        .sticky {
          top: 205px;
        }
      }
    }
    app-receive {
      .container-flex {
        &.with-tab-bar {
          height: calc(100vh - 290px);
          @include break(l) {
            height: calc(100vh - 310px);
          }
        }
      }
    }
    /*
    app-add-item,
    app-help {
      .container-block {
        margin-top: 125px;
      }
    }
    */
  }
}

